src/views/Dashboard/Dashboard.module.css
.dashboard {
  box-sizing: border-box;
  display: flex;
  gap: 0.5rem;
  padding: 0.5rem;
  width: 100%;
  height: 100%;
  border: 2px solid var(--text-color);
  border-radius: 0.5rem;
}
.left {
  flex: 2;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0.5rem;
}
.left > div {
  border: 1px solid black;
}
.right {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}
.right > div:last-child {
  flex-grow: 1;
  border: 1px solid black;
}

